# docker-tfx-on-kubeflow

./: Dockerfile  Pipfile  README.md  mlpileline-minio-artifact.yaml  pyproject.toml  requirements.txt
src/: load_data.py  pipeline.py  taxi_train.py  taxi_transform.py
