[tool.poetry]
name = "docker-tfx-on-kubeflow"
version = "0.1.0"
description = ""
authors = ["Shunpoco <tkngsnsk313320@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
tfx = "^0.27.0"
jupyter = "^1.0.0"
kfp = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
